--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ eggs/
 .eggs/
 lib/
 lib64/
-parking_analysis/
 parts/
 sdist/
 var/
@@ -109,6 +108,8 @@ env/
 venv/
 ENV/
 env.bak/
+**/parking_analysis/
+parking_analysis/
 venv.bak/
 
 # Spyder project settings
