--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.gitignore
 .Python
 build/
 develop-eggs/
@@ -109,6 +110,8 @@ venv/
 ENV/
 env.bak/
 **/parking_analysis/
+dir_to_ignore/
+/parking_analysis/
 parking_analysis/
 venv.bak/
 
